# sh3l

./: .env.example  .gitignore  Dockerfile  GOOGLE_PLAY_SUBMISSION.md  PROJECT_STATUS.md  README.md  docker-compose.full.yml  docker-compose.ygy.yml  docker-compose.yml  index.html  lumosity.db  manifest.json  package-lock.json  package.json  start-ygy.bat  start-ygy.sh  sw-enhanced.js  sw.js  tsconfig.json  turbo.json  ygy-manifest.yml
admin/: composer.json  index.php
backend/: .coverage  .env  .env.example  Dockerfile  Dockerfile.php  ai_personalization.py  ai_recommender.py  alembic.ini  analytics.php  api.py  auth.py  brain_training_old.db  cognitive_analytics.py  cognitive_ml_service.py  cognitive_profiling_engine.py  composer.json  config.php  config.py  database.py  gamification_api.py  gamification_models.py  init.sql  main.py  models.py  nlp_games_service.py  pyproject.toml  requirements-ml.txt  requirements.txt  sanitize.py  schemas.py  seed.py  settings.py  tasks.py  test.db  websocket_server.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/tests/: conftest.py  test_api.py  test_config.py
data-pipeline/: Dockerfile  pipeline.py  requirements.txt
infrastructure/: bootstrap_platform.sh
k8s/: deployment.yaml
lumosity-app/: .env  .env.example  Dockerfile  capacitor.config.ts  index.html  nginx.conf  package-lock.json  package.json  package.json.tmp  tsconfig.json  vite.config.ts
mindpal-app/: package-lock.json  package.json
ml-models/: Dockerfile  advanced_analytics_worker.py  advanced_pipeline.py  (+2 more)
(+450 files in other folders)
